# ros2_ws

diff_drive_gazebo_plugin/: CMakeLists.txt  package.xml
diff_drive_gazebo_plugin/src/: diff_drive_plugin.cpp
dmr_encoder_description/: CMakeLists.txt  package.xml
m2wr_description/: CMakeLists.txt  package.xml
m2wr_description/config/: rviz_config.rviz
m2wr_description/launch/: gazebo.launch.py  rviz.launch.py  spawn.launch.py
m2wr_description/urdf/: gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
m2wr_navigation/: CMakeLists.txt  package.xml
m2wr_navigation/config/: nav2_params.yaml
m2wr_navigation/launch/: amcl.launch.py  mapper.launch.py
m2wr_navigation/maps/: my_map.pgm  my_map.yaml  my_map2.pgm  my_map2.yaml
m2wr_twist/: CMakeLists.txt
pendulum_simple/: CMakeLists.txt  package.xml
pendulum_simple/config/: rviz.config.rviz
pendulum_simple/launch/: control.launch.py  pendulum.launch.py
pendulum_simple/plugins/: pendulum_simple_plugin.cpp
pendulum_simple/src/: pendulum_control.cpp
pendulum_simple/urdf/: pendulum.urdf.xacro
pendulum_simple/worlds/: myEmpty.world
sphero_control/: CMakeLists.txt  package.xml
sphero_control/launch/: sphero_start.launch.py
sphero_control/src/: tangentional_escape.cpp  tr_fb_almost_global_controller.cpp  tr_fb_geometry_controller.cpp  tr_fb_lyapunov.cpp  tr_fb_v_alpha_control.cpp  tr_without_fb.cpp
sphero_python/: package.xml  setup.cfg  setup.py
sphero_python/sphero_python/: data_K.mat  data_star.mat  debug_tests.py  sphero_dynamics.py  sphero_transversal.py  test_dynamics.py  x_star.mat
spherorobot_cpp/: CMakeLists.txt  package.xml
spherorobot_cpp/control/: sphero_control.cpp
spherorobot_cpp/launch/: gazebo.launch.py  pendulum_controller.launch.py  platform_controller.launch.py  rotor_vel_controller.launch.py  rsp.launch.py  sphero_ang_vel_controller.launch.py  sphero_controller.launch.py  sphero_lin_vel_controller.launch.py  sphero_platform_spawn.launch.py  sphero_vw_control.launch.py  sphero_vw_controller.launch.py  sphero_yaw_controller.launch.py  spherofixed_spawn.launch.py  spherorotor_spawn.launch.py  spherospawn.launch.py  tablespawn.launch.py
spherorobot_cpp/meshes/: base_sphere_link.STL  pendulum_link.STL  rotor_link.STL
spherorobot_cpp/plugins/: pendulum_drive_plugin.cpp  sphero_plugin.cpp
spherorobot_cpp/src/: pendulum_control.cpp  platform_control.cpp  rotor_vel_control.cpp  sphero_ang_vel_control.cpp  sphero_control.cpp  sphero_lin_vel_control.cpp  sphero_vw_control.cpp  sphero_yaw_control.cpp
spherorobot_cpp/src/control/: stabilization_lqr.py
spherorobot_cpp/src/launch/: ignition_pendulum_sim.launch.py  pendulum_sim.launch.py  rsp.launch.py  spherofixed_spawn.launch.py  spherospawn.launch.py  tablespawn.launch.py
spherorobot_cpp/src/plugins/: pendulum_drive_plugin.cpp  pendulum_drive_plugin_old
spherorobot_cpp/src/urdf/: spherorobot_v2.urdf  spherorobot_v3.urdf  spherorobot_v5_1.urdf  spherorobot_v5_2.urdf  spherorobot_v6.urdf  vibro_table.urdf
spherorobot_cpp/src/worlds/: spherorobot.world
spherorobot_cpp/urdf/: spherorobot_rotor_v1 copy.urdf  spherorobot_rotor_v1.urdf  spherorobot_v2.csv  spherorobot_v4.urdf  spherorobot_v5.urdf  spherorobot_v5_1.urdf  spherorobot_v5_2.urdf  vibro_table.urdf
spherorobot_cpp/worlds/: cilinder11.world  myEmpty.world
test_cpp_pkg/src/: myPublisher.cpp
